# Alghoritmes_and_structurs

./: CMakeLists.txt  README.md
cmake/: function.cmake
gtest/: CMakeLists.txt
lib_RB_tree/: CMakeLists.txt  rb_tree.cpp  rb_tree.h
lib_binSearchTree/: CMakeLists.txt  binNode.cpp  binNode.h  binSearchTree.cpp  binSearchTree.h
lib_calculator/: CMakeLists.txt  expression.cpp  expression.h  lexems.cpp  lexems.h
lib_dmassive/: CMakeLists.txt  archive.cpp  archive.h
lib_dsu/: CMakeLists.txt  dsu.cpp  dsu.h
lib_easy_example/: CMakeLists.txt  easy_example.cpp  easy_example.h
lib_hash_table/: CMakeLists.txt  colission.h  hash_table.cpp  hash_table.h
lib_heap/: CMakeLists.txt  heap.cpp  heap.h
lib_itable/: CMakeLists.txt  itable.cpp  itable.h
lib_list/: CMakeLists.txt  tlist.cpp  tlist.h  tnode.cpp  tnode.h
lib_matrix/: CMakeLists.txt  matrix.cpp  matrix.h
lib_pair/: CMakeLists.txt  pair.cpp  pair.h
lib_parser/: CMakeLists.txt  lab_on_dsu.cpp  parser.cpp  parser.h
lib_polinom/: CMakeLists.txt  polinom.cpp  polinom.h
lib_queue/: CMakeLists.txt  queue.cpp  queue.h
lib_sorted_table/: CMakeLists.txt  stable_on_mas.cpp  stable_on_mas.h
lib_stack/: CMakeLists.txt  stack.cpp  stack.h
lib_stackOnList/: CMakeLists.txt  lstack.cpp  lstack.h
lib_string/: CMakeLists.txt  cstring.cpp  cstring.h
lib_unsort_table/: CMakeLists.txt  untable.cpp  untable.h  untable_mas.cpp  untable_mas.h  untable_tree.cpp  untable_tree.h
lib_vector/: CMakeLists.txt  tvector.h
main/: CMakeLists.txt  calc_main.cpp  main.cpp  utilities.h
tests/: CMakeLists.txt  (+19 more)
(+2 files in other folders)
